--- a/terraform/variables.tf.sample
+++ b/terraform/variables.tf.sample
@@ -22,3 +22,13 @@ variable "personal_ip" {
   description = "Your IP address"
   default     = "0.0.0.0"
 }
+
+variable "ubuntu_ami" {
+  description = "Region specific Ubuntu ami. See https://cloud-images.ubuntu.com/locator/ec2/ to find the one that'll work with the region you pick."
+  default     = "ami-0a63f96e85105c6d3"
+}
+
+variable "instance_type" {
+  description = "Size of instance."
+  default = "t2.micro"
+}
